# module_simple_rag

./: .gitignore  pyproject.toml
simple_rag/: component.yaml  run.py  schemas.py
