[tool.poetry]
name = "simple_rag"
version = "0.1.0"
description = ""
authors = ["Mohamed Arshath <marshath@gmail.com>"]
readme = "README.md"
packages = [
    {include = "simple_rag", from="."}
]

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.12.1"
chromadb = "^0.5.3"
litellm = "^1.41.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"